<resources>
    <string name="user_name">User name</string>
    <string name="password">"Password "</string>
    <string name="sig_in">"Sig in "</string>
    <string name="login_with_admin">Log in as an administrator</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="app_name">Manage Your Store</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone">Phone</string>
    <string name="question">Home town</string>
    <string name="answer">Email</string>
    <string name="submit">Update</string>
    <string name="product">Hot product</string>
    <string name="best_sale_product">News product</string>
    <string name="mouse_product">Mouse</string>
    <string name="key_board">Keyboard</string>
    <string name="other_product">Other</string>
    <string name="view_all">View all ></string>
    <string name="home">Home</string>
    <string name="sell">Sell</string>
    <string name="history">Transaction history</string>
    <string name="me">Me</string>
    <string name="entor_your_name">Enter the product name</string>
    <string name="all_product">All product</string>
    <string name="your_order">Order detail</string>
    <string name="information">User information</string>
    <string name="personal_information_management">Personal information management</string>
    <string name="change_the_password">Change the password</string>
    <string name="personal_change_information">Personal change information</string>
    <string name="add_products">Add product</string>
    <string name="edit_products">Update product</string>
    <string name="delete_products">Delete product</string>
    <string name="name_product">Product name</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="describe">Describe</string>
    <string name="image">Image</string>
    <string name="producer">Producer</string>
    <string name="old_password">Your old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="type_product">Type</string>
    <string name="pay">Pay</string>
    <string name="total">Total price:</string>
    <string-array name="list_producer">
        <item>Logitech</item>
        <item>Dell</item>
        <item>Asus</item>
        <item>HP</item>
        <item>ColorPlus</item>
        <item>Acer</item>
        <item>Other</item>
    </string-array>
    <string-array name="list_sort">
        <item>Từ A-Z</item>
        <item>Tên Z-A</item>
        <item>Chuột</item>
        <item>Bàn phím</item>
        <item>SP khác</item>
        <item>Tất cả sản phẩm</item>
    </string-array>
    <string name="delete">Delete</string>
    <string name="sing_out">Sing out</string>
    <string name="report">Report</string>
    <string name="products">Products</string>
    <string name="employees">Employees</string>
    <string name="add">Add</string>
    <string name="enter_employees_name">Enter employee name</string>
    <string name="staff_information">Staff information</string>
    <string name="product_information">Product information</string>
    <string name="add_employee">Add employee</string>
    <string name="update_employee">Update employee</string>
    <string name="manage_employee">Manage imployee</string>
    <string name="price_import">Price import</string>
    <string name="add_image">Add image</string>
    <string name="transaction_list">Transaction list</string>
    <string name="date">Date</string>
    <string name="IDBill">ID Bill</string>
    <string name="total_import">Total price import</string>
    <string name="total_price">Total price sell</string>
    <string name="Number_of_transactions">"Number of transactions: "</string>
    <string name="total_interest">"Total interest: "</string>
    <string name="Change_Image">Change image</string>
    <string name="choose_image">Choose image</string>
    <string name="update">Update</string>
    <string name="update_Amount">Quantity purchased</string>
    <string name="enter_amount">Enter amount:</string>
    <string name="bill">Bill</string>
    <string name="TransactionHistory">Transaction history</string>
    <string name="No_staff_found">No staff found</string>
    <string name="link">Please click on the tab Add -> Add Employees</string>
    <string name="no_product_found">No product found</string>
    <string name="link2">Please click the Add tab -> Add product</string>
    <string name="view_infor">View information</string>
</resources>