<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_light">

            <TextView
                android:id="@+id/tvAddProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_color"
                android:gravity="center"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/add_products"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llContentProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAddProduct"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_product"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:id="@+id/etProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:id="@+id/etProductAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/type_product"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMouse"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/mouse_product"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />

                        <RadioButton
                            android:id="@+id/radioKeyBoard"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/key_board"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />

                        <RadioButton
                            android:id="@+id/radioOther"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/other_product"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />
                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/producer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:id="@+id/etProductProducer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/describe"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:id="@+id/etProductDescribe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/image"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageProduct"
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="@dimen/_200sdp"
                        android:layout_marginTop="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/tvLinkImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="Thêm ảnh" />
                </RelativeLayout>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:id="@+id/listImage"
                android:background="#FFFFFF"
                android:visibility="invisible"
                android:layout_marginTop="@dimen/_380sdp"
                android:layout_height="@dimen/_300sdp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llContentProduct"
                android:layout_marginBottom="@dimen/_20sdp">

                <Button
                    android:id="@+id/buttonAddProduct"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/main_color"
                    android:text="@string/add_products"
                    android:textColor="@color/white" />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>