<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDelProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/change_the_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/tvPassChange"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDelProduct"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/user_name"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:singleLine="true"
                android:inputType="text"
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/old_password"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:singleLine="true"
                android:inputType="text"
                android:id="@+id/tvOldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/new_password"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:singleLine="true"
                android:inputType="text"
                android:id="@+id/tvNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/confirm_password"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:singleLine="true"
                android:inputType="text"
                android:id="@+id/tvConfirmNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="@dimen/_5sdp"
          android:layout_below="@+id/tvPassChange">
          <Button
              android:id="@+id/btnChangePassword"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/main_color"
              android:textColor="@color/white"
              android:layout_alignParentBottom="true"
              android:layout_margin="@dimen/_5sdp"
              android:layout_centerInParent="true"
              android:text="@string/change_the_password"
              android:layout_centerHorizontal="true"/>
      </RelativeLayout>
    </RelativeLayout>
</layout>