<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_light">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/ic_baseline_west_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_50sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/add_products"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/llContentProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_55sdp"
                android:layout_marginRight="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_product"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/etProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="@dimen/_15sdp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price_import"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/etProductPriceImport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/etProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/etProductAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/image"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <RelativeLayout
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_205sdp">

                        <ImageView
                            android:id="@+id/imageProduct"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_140sdp"
                            android:layout_height="@dimen/_200sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:background="@drawable/border_cancle"
                            android:scaleType="fitXY" />

                        <TextView
                            android:id="@+id/tvLinkImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="Thêm ảnh" />
                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/type_product"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioMouse"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/mouse_product"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_15sdp" />

                            <RadioButton
                                android:id="@+id/radioKeyBoard"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/key_board"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_15sdp" />

                            <RadioButton
                                android:id="@+id/radioOther"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/other_product"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_15sdp" />
                        </RadioGroup>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/producer"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <Spinner
                        android:id="@+id/spinerProductProducer"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/etProductProducer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:inputType="text"
                        android:visibility="gone"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/describe"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/etProductDescribe"
                        android:layout_width="@dimen/_285sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/llContentProduct"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_20sdp">

                <Button
                    android:id="@+id/buttonAddProduct"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/main_color"
                    android:text="@string/add_products"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>